<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CityDetail"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/cityImg"
        android:layout_width="wrap_content"
        android:layout_height="560dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/labelCityImage"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/cityName"
        app:layout_constraintStart_toStartOf="@+id/cityName"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/labelCityName"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/cityInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxWidth="380dp"
        android:text="@string/labelCityInfo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/cityImg"
        app:layout_constraintStart_toStartOf="@+id/cityImg"
        app:layout_constraintTop_toBottomOf="@+id/cityImg" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/backBtnDescription"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backBtnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtnlabel"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>